--- a/general_cnn/alexnet.ipynb
+++ b/general_cnn/alexnet.ipynb
@@ -194,11 +194,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Resuming training from epoch 5\n",
-      "Checkpoint saved at checkpoints/checkpoint_epoch_4.pth\n"
+      "Epoch: [1/5], Step: [101/782], Loss: 1.9761:  13%|█▎        | 101/782 [02:03<13:51,  1.22s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 60\u001b[0m\n\u001b[1;32m     57\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     59\u001b[0m \u001b[38;5;66;03m# Record training loss\u001b[39;00m\n\u001b[0;32m---> 60\u001b[0m train_losses\u001b[38;5;241m.\u001b[39mappend(\u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     62\u001b[0m \u001b[38;5;66;03m# Print training information\u001b[39;00m\n\u001b[1;32m     63\u001b[0m progress_bar\u001b[38;5;241m.\u001b[39mset_description(\n\u001b[1;32m     64\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEpoch: [\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m], Step: [\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m], Loss: \u001b[39m\u001b[38;5;132;01m{:.4f}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(epoch \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, num_epochs, i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m, total_step, loss\u001b[38;5;241m.\u001b[39mitem()))\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -212,7 +222,7 @@
     "optimizer = optim.Adam(alexnet.parameters(), lr=learning_rate)\n",
     "\n",
     "# Directory to save checkpoints\n",
-    "checkpoint_dir = 'checkpoints'\n",
+    "checkpoint_dir = 'checkpoints/alexnet'\n",
     "\n",
     "# Create the checkpoint directory if it doesn't exist\n",
     "if not os.path.exists(checkpoint_dir):\n",
@@ -230,7 +240,7 @@
     "    print(f'Checkpoint saved at {checkpoint_filename}')\n",
     "\n",
     "# Check if there is an existing checkpoint file\n",
-    "checkpoint_filename = os.path.join(checkpoint_dir, 'alexnet_checkpoint.pth')\n",
+    "checkpoint_filename = os.path.join(checkpoint_dir, 'latest_checkpoint.pth')\n",
     "if os.path.exists(checkpoint_filename):\n",
     "    checkpoint = torch.load(checkpoint_filename)\n",
     "    starting_epoch = checkpoint['epoch'] + 1\n",
@@ -299,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
