adjust folder structure

--- a/general_cnn/alexnet.ipynb
+++ b/general_cnn/alexnet.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,14 +51,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files already downloaded and verified\n",
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to /home/jimazeyu/.cache/cifar-10-python.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 170498071/170498071 [00:05<00:00, 31395428.65it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /home/jimazeyu/.cache/cifar-10-python.tar.gz to /home/jimazeyu/.cache\n",
       "Files already downloaded and verified\n"
      ]
     }
@@ -71,9 +85,9 @@
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)) # mean, std\n",
     "])\n",
     "BATCH_SIZE = 64\n",
-    "train_dataset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
+    "train_dataset = torchvision.datasets.CIFAR10(root='~/.cache', train=True, download=True, transform=transform)\n",
     "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=4)\n",
-    "test_dataset = torchvision.datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)\n",
+    "test_dataset = torchvision.datasets.CIFAR10(root='~/.cache', train=False, download=True, transform=transform)\n",
     "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=4)\n"
    ]
   },
