--- a/general_cnn/densenet.ipynb
+++ b/general_cnn/densenet.ipynb
@@ -71,9 +71,9 @@
     "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)) # mean, std\n",
     "])\n",
     "BATCH_SIZE = 16\n",
-    "train_dataset = torchvision.datasets.CIFAR10(root='./data', train=True, download=True, transform=transform)\n",
+    "train_dataset = torchvision.datasets.CIFAR10(root='~/.cache', train=True, download=True, transform=transform)\n",
     "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=4)\n",
-    "test_dataset = torchvision.datasets.CIFAR10(root='./data', train=False, download=True, transform=transform)\n",
+    "test_dataset = torchvision.datasets.CIFAR10(root='~/.cache', train=False, download=True, transform=transform)\n",
     "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=False, num_workers=4)\n"
    ]
   },
