Modify the contents of the ipynb file

--- a/general_pointcloud/Pointnet&pointnet++/train_classification.ipynb
+++ b/general_pointcloud/Pointnet&pointnet++/train_classification.ipynb
@@ -192,9 +192,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sys.argv = ['train_classification.py','--model','pointnet2_cls_ssg','--log_dir','pointnet2_cls_ssg']\n",
     "# 参数解析\n",
     "args = parse_args()\n",
-    "print(\"解析到的参数：\", args)\n",
     "\n",
     "# 创建日志记录器\n",
     "logger = logging.getLogger(\"Model\")\n",
