--- a/rnn/rnn.ipynb
+++ b/rnn/rnn.ipynb
@@ -8,7 +8,11 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "import numpy as np"
+    "import torch.optim as optim\n",
+    "import torchvision\n",
+    "import torchvision.transforms as transforms\n",
+    "from tqdm import tqdm\n",
+    "from sklearn.metrics import accuracy_score"
    ]
   },
   {
@@ -17,65 +21,250 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a simple time series dataset\n",
-    "sequence_length = 10\n",
-    "input_size = 1\n",
-    "hidden_size = 32\n",
-    "\n",
-    "# Generate some random time series data\n",
-    "data = np.sin(np.linspace(0, 100, sequence_length))\n",
-    "\n",
-    "# Convert the data into a PyTorch tensor\n",
-    "data = torch.FloatTensor(data).view(1, sequence_length, input_size)"
+    "# 定义超参数\n",
+    "input_size = 32  # 每行的输入大小\n",
+    "hidden_size = 256  # RNN隐藏状态的大小\n",
+    "num_classes = 10  # MNIST数据集的类别数\n",
+    "num_epochs = 10\n",
+    "batch_size = 64\n",
+    "learning_rate = 0.001"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "# Define the RNN model\n",
-    "class SimpleRNN(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, num_layers):\n",
-    "        super(SimpleRNN, self).__init__()\n",
-    "        self.hidden_size = hidden_size\n",
-    "        self.num_layers = num_layers\n",
-    "        self.rnn = nn.RNN(input_size, hidden_size, num_layers, batch_first=True)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        # Initialize the hidden state\n",
-    "        h0 = torch.zeros(self.num_layers, x.size(0), self.hidden_size).to(x.device)\n",
-    "        \n",
-    "        # Forward pass\n",
-    "        out, _ = self.rnn(x, h0)\n",
-    "        return out"
+    "# 定义灰度化转换器\n",
+    "class GrayscaleTransform(object):\n",
+    "    def __call__(self, sample):\n",
+    "        gray_image = transforms.functional.rgb_to_grayscale(sample)\n",
+    "        return gray_image\n",
+    "# 加载CIFAR-10数据集并进行灰度化处理\n",
+    "transform = transforms.Compose([GrayscaleTransform(), transforms.ToTensor()])\n",
+    "train_dataset = torchvision.datasets.CIFAR10(root='~/.cache', train=True, transform=transform, download=True)\n",
+    "train_loader = torch.utils.data.DataLoader(dataset=train_dataset, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义RNN模型\n",
+    "class RNNClassifier(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, num_classes):\n",
+    "        super(RNNClassifier, self).__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.rnn = nn.RNN(input_size, hidden_size, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_size, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out, _ = self.rnn(x)\n",
+    "        out = self.fc(out[:, -1, :])\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 初始化模型和优化器\n",
+    "model = RNNClassifier(input_size, hidden_size, num_classes)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10: 100%|██████████| 782/782 [00:21<00:00, 36.49it/s]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Output shape: torch.Size([1, 10, 32])\n"
+      "Epoch [1/10], Loss: 1691.674005150795, Accuracy: 0.18\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/10: 100%|██████████| 782/782 [02:00<00:00,  6.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [2/10], Loss: 1623.0024338960648, Accuracy: 0.22\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/10: 100%|██████████| 782/782 [01:05<00:00, 11.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [3/10], Loss: 1592.9906829595566, Accuracy: 0.24\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/10: 100%|██████████| 782/782 [01:15<00:00, 10.30it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [4/10], Loss: 1505.6392353773117, Accuracy: 0.30\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/10: 100%|██████████| 782/782 [00:21<00:00, 37.02it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [5/10], Loss: 1460.4292577505112, Accuracy: 0.32\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/10: 100%|██████████| 782/782 [00:19<00:00, 40.36it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [6/10], Loss: 1423.1605699062347, Accuracy: 0.34\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/10: 100%|██████████| 782/782 [00:19<00:00, 40.57it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [7/10], Loss: 1403.23260140419, Accuracy: 0.35\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/10: 100%|██████████| 782/782 [00:18<00:00, 42.78it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [8/10], Loss: 1375.896322131157, Accuracy: 0.36\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/10: 100%|██████████| 782/782 [00:18<00:00, 42.34it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [9/10], Loss: 1357.0546923875809, Accuracy: 0.37\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10/10: 100%|██████████| 782/782 [00:18<00:00, 42.36it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [10/10], Loss: 1341.876165151596, Accuracy: 0.38\n",
+      "Training finished.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "#Create an instance of the RNN model\n",
-    "num_layers = 1\n",
-    "model = SimpleRNN(input_size, hidden_size, num_layers)\n",
+    "# 训练模型\n",
+    "for epoch in range(num_epochs):\n",
+    "    total_loss = 0.0\n",
+    "    predictions = []\n",
+    "    ground_truth = []\n",
     "\n",
-    "# Apply the model to the data\n",
-    "output = model(data)\n",
+    "    for images, labels in tqdm(train_loader, desc=f'Epoch {epoch + 1}/{num_epochs}'):\n",
+    "        images = images.view(-1, 32, 32)  # 将每行作为输入\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(images)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
     "\n",
-    "# Print the shape of the output\n",
-    "print(\"Output shape:\", output.shape)"
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        predictions.extend(predicted.tolist())\n",
+    "        ground_truth.extend(labels.tolist())\n",
+    "\n",
+    "    accuracy = accuracy_score(ground_truth, predictions)\n",
+    "    print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {total_loss}, Accuracy: {accuracy:.2f}')\n",
+    "\n",
+    "print('Training finished.')"
    ]
   }
  ],
@@ -95,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
