modified:   nerf/tiny_nerf.ipynb

--- a/nerf/tiny_nerf.ipynb
+++ b/nerf/tiny_nerf.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -83,13 +83,47 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "VeryTinyNeRFMLP(\n",
+              "  (early_mlp): Sequential(\n",
+              "    (0): Linear(in_features=39, out_features=256, bias=True)\n",
+              "    (1): ReLU()\n",
+              "    (2): Linear(in_features=256, out_features=257, bias=True)\n",
+              "    (3): ReLU()\n",
+              "  )\n",
+              "  (late_mlp): Sequential(\n",
+              "    (0): Linear(in_features=283, out_features=256, bias=True)\n",
+              "    (1): ReLU()\n",
+              "    (2): Linear(in_features=256, out_features=3, bias=True)\n",
+              "    (3): Sigmoid()\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "tets_tiny_model = VeryTinyNeRFMLP()\n",
+        "tets_tiny_model"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
         "class VeryTinyNeRF:\n",
         "    def __init__(self, device):\n",
-        "        # 初始化NeRF的MLP模型并将其移动到指定的设备（如GPU）\n",
+        "        # 初始化NeRF的MLP模型并将其移动到指定的设备\n",
         "        self.F_c = VeryTinyNeRFMLP().to(device)\n",
         "\n",
         "        # 设置批处理大小\n",
@@ -109,13 +143,11 @@
         "        self.t_i_c_bin_edges = (t_n + torch.arange(N_c) * t_i_c_gap).to(device)\n",
         "\n",
         "    def get_coarse_query_points(self, ds, os):\n",
-        "        # 随机生成样本点的时间位置\n",
+        "        # 计算样本点时间位置（坐标）\n",
         "        u_is_c = torch.rand(*list(ds.shape[:2]) + [self.N_c]).to(ds)\n",
-        "\n",
-        "        # 计算实际的样本点时间位置\n",
         "        t_is_c = self.t_i_c_bin_edges + u_is_c * self.t_i_c_gap\n",
         "\n",
-        "        # 计算样本点的空间位置\n",
+        "        # 计算样本点的空间位置（距离）\n",
         "        r_ts_c = os[..., None, :] + t_is_c[..., :, None] * ds[..., None, :]\n",
         "        return (r_ts_c, t_is_c)\n",
         "\n",
